--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<p>This is a new repo </p>
-<p>This is a new feature</p>
-<p>This is a new update to feature1</p>
+<p>This is a new repo </p> 
+<p>This is a new feature (button)</p>
