--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>This is a new repo </p>
-<p>This is a new feature</p>
+<p>This is a new feature (dropdwon)</p>
 <p>This is a new update to feature1</p>
